# note

./: .gitignore  README.md  app.py  main.py  memos.json  pyproject.toml  start.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: IMPROVEMENT_SUGGESTIONS.md  PRD_REVIEW.md
static/: style.css
templates/: edit.html  index.html
tests/: test_app.py
